--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,14 @@
-{
+  {
     "manifest_version": 3,
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
+    "name": "Room Request Autofill",
     "version": "1.0",
+    "description": "Autofill frequently used fields in UTD room request forms.",
+    "permissions": ["activeTab", "storage", "scripting"],
     "action": {
-      "default_popup": "hello.html",
+      "default_popup": "popup.html",
       "default_icon": "hello_extensions.png"
+    },
+    "background": {
+      "service_worker": "background.js"
     }
   }
